--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.expediagroup.dropwizard</groupId>
     <artifactId>dropwizard-template-config</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.1.0</version>
 
     <name>Dropwizard Template Configuration</name>
     <description>
